--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
                 <div class="carousel-inner">
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/4O3l5a9j6Ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://youtu.be/V9VJ5wLSQPs?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                         <div class="video-info">
                             <h3>Getting Started with Venmo</h3>
