--- a/index.html
+++ b/index.html
@@ -656,8 +656,7 @@
                 <div class="carousel-inner">
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/watch?v=V9VJ5wLSQPs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/V9VJ5wLSQPs?si=xnU6pq3s146ePoL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Getting Started with Venmo</h3>
                             <p>Learn how to create your account and make your first payment</p>
