--- a/index.html
+++ b/index.html
@@ -664,8 +664,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/5X6B2Y9L6D4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/CcnsWAZKS1A?si=8YG-xFaQuGvHzPDq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Splitting Bills Made Easy</h3>
                             <p>How to fairly split expenses with friends and roommates</p>
@@ -673,8 +672,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/7X8B9L6D5F3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/sPI71vOSo9I?si=do9NSr851Bx6K-5h" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Venmo Security Features</h3>
                             <p>Protect your account with these essential security tips</p>
@@ -682,8 +680,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/9JQ8L6D5F3X" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <<iframe width="560" height="315" src="https://www.youtube.com/embed/ivXqYkNPn1w?si=gSKE4ou7L2EBe5oX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Using Venmo for Small Business</h3>
                             <p>Accept payments for your side hustle or small business</p>
@@ -691,8 +688,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/2Y9L6D5F3X8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <<iframe width="560" height="315" src="https://www.youtube.com/embed/_FS70viQhIA?si=rAz9puGP6TaZmgAN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Venmo Debit Card Explained</h3>
                             <p>How to get and use the Venmo debit card for purchases</p>
@@ -700,8 +696,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/3X8B9L6D5F3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/91HXxGbS7tU?si=fJiNYl__vGJ_WDh0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Managing Your Venmo Balance</h3>
                             <p>How to add money, transfer to bank, and track spending</p>
@@ -709,8 +704,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/4X8B9L6D5F3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <<iframe width="560" height="315" src="https://www.youtube.com/embed/he725jZrgic?si=C2vKvpoJRAjRo7_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Venmo Privacy Settings</h3>
                             <p>Control who sees your transactions and personal info</p>
@@ -718,8 +712,7 @@
                     </div>
                     <div class="video-card">
                         <div class="video-container">
-                            <iframe src="https://www.youtube.com/embed/5X8B9L6D5F3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
+                            <<iframe width="560" height="315" src="https://www.youtube.com/embed/FJhw9qx5tIE?si=wgnDATwmimwQWXgV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>                        </div>
                         <div class="video-info">
                             <h3>Venmo Rewards Program</h3>
                             <p>Earn cash back with the Venmo credit card</p>
