--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
 
 
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-381621954">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-381621954');
+</script>
+
+
   <!-- Event snippet for Page view conversion page -->
 <script>
   gtag('event', 'conversion', {'send_to': 'AW-16937409653/vPuVCOOG1q8aEPW4sYw_'});
