--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-381621954">
-</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-381621954"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -13,7 +12,6 @@
 
   gtag('config', 'AW-381621954');
 </script>
-
 
   <!-- Event snippet for Page view conversion page -->
 <script>
