--- a/index.html
+++ b/index.html
@@ -3,20 +3,14 @@
 <head>
 
 
-  <!-- Event snippet for Page view conversion page -->
-<script>
-  gtag('event', 'conversion', {'send_to': 'AW-16937409653/vPuVCOOG1q8aEPW4sYw_'});
-</script>
-
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16937409653"></script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H33WE1Y55L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-16937409653');
+  gtag('config', 'G-H33WE1Y55L');
 </script>
     
     <meta charset="UTF-8">
