--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
 
 
+
+ <!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17016654872/HQ_eCPDHpboaEJiYlrI_',
+      'value': 1.0,
+      'currency': 'USD'
+  });
+</script>
+
+
  <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H33WE1Y55L"></script>
 <script>
