--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17016654872">
-</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GYE9DZZ07P"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-17016654872');
+  gtag('config', 'G-GYE9DZZ07P');
 </script>
 
  
